--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -12,7 +12,7 @@ knitr::opts_chunk$set(warning = FALSE, message = FALSE)
 # This code uses dplyr functions released in February 2021, so please update dplyr if you have not done so already.
 
 # List of packages to install
-packages <- c("tidyverse", "readxl", "janitor", "reticulate", "countrycode", "Hmisc", "lubridate", "skimr", "haven", "labelled", "scales")
+packages <- c("tidyverse", "readxl", "janitor", "reticulate", "countrycode", "Hmisc", "lubridate", "skimr", "haven", "labelled", "scales", "WDI")
 
 # To install the packages, uncomment the line below and run it
 #install.packages(packages)
@@ -28,6 +28,7 @@ library(skimr)
 library(haven)
 library(labelled)
 library(scales)
+library(WDI)
 ```
 
 ```{r functions, include=FALSE}
@@ -214,7 +215,7 @@ fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
   
 ## Transparency International Corruption Perception Index
   
-  import_CPI_Transparency_International <- read_excel("data/CPI_Transparency_International.xlsx")
+  import_CPI_Transparency_International <- read_excel("data/CPI_Transparency_International_rev.xlsx")
   
   df_cpi <- import_CPI_Transparency_International %>%
     clean_names() %>%
@@ -222,7 +223,10 @@ fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
       country_standard = countrycode(
         country_code,
         origin = "iso3c",
-        destination = "country.name")) %>%
+        destination = "country.name"),
+      country_standard = case_when(
+        country_code == "KSV" ~ "Kosovo",
+        TRUE ~ country_standard)) %>%
     select(country_standard, year, cpi_score)
   
 ########################################     
@@ -285,7 +289,7 @@ fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
     clean_names() %>%
     rename(country = country_territory) %>%
     # The countrycodes package does not include Kosovo or the Netherlands Antilles
-    filter(!country %in% c("Kosovo", "Netherlands Antilles (former)")) %>%
+    #filter(!country %in% c("Kosovo", "Netherlands Antilles (former)")) %>%
     mutate(
       country = case_when(
         code == "CIV" ~ "Ivory Coast",
@@ -296,8 +300,11 @@ fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
       country_standard = countrycode(
           iso_code, 
           origin = "iso3c", 
-          destination = "country.name"
-          )) %>%
+          destination = "country.name"),
+      country_standard = ifelse(
+        is.na(country_standard),
+        country,
+        country_standard)) %>%
     # Adding "wgi" prefix to indicators
     rename_with( 
       ~ paste("wgi", .x, sep = "_"),
@@ -391,25 +398,27 @@ fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
 ########################################    
   
 ## Freedom House indicators ##
-  import_Freedom_house <- read_excel("data/Freedom_house.xlsx")
+  import_Freedom_house  <- read_csv("data/Freedom_house_rev.csv")
   
   # Note: the higher the freedom score, the better
   df_fh <- import_Freedom_house %>%
     clean_names() %>%
-    select(-country_territory) %>%
-    filter(!countries %in% 
-             c('Abkhazia', 'Crimea', 'Eastern Donbas', 'Kosovo', 'Micronesia',
-               'Nagorno-Karabakh', 'Somaliland', 'South Ossetia', 'Tibet',
-               'Transnistria')) %>%
+    # filter(!countries %in% 
+    #          c('Abkhazia', 'Crimea', 'Eastern Donbas', 'Kosovo', 'Micronesia',
+    #            'Nagorno-Karabakh', 'Somaliland', 'South Ossetia', 'Tibet',
+    #            'Transnistria', 'Chechnya', 'Serbia and Montenegro')) %>%
     # If I want to take out the line below, import sheet two from the excel file instead
-    pivot_longer(!countries, names_to = "year", values_to = "fh_global_freedom_score") %>%
     mutate(
       iso_code = countrycode(countries, origin = 'country.name', destination = 'iso3c'),        
       country_standard = countrycode(
           iso_code, 
           origin = "iso3c", 
           destination = "country.name"),
-      year = as.numeric(str_remove(year, "x"))) %>%
+      coutry_standard = ifelse(
+        is.na(country_standard),
+        countries,
+        country_standard)) %>%
+    rename(fh_global_freedom_score = global_freedom_score) %>%
     select(country_standard, year, fh_global_freedom_score) %>%
     arrange(country_standard, year)
 
@@ -576,19 +585,20 @@ fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
 ## Gini Coefficient ##
   
   # We're using the Gini coefficient as a control variable
-  import_Gini_coefficient_2020 <- read_csv("data/Gini_coefficient_2020.csv")
+  # Gini data is only up to date through 2018
+  import_Gini_coefficient <- WDI(indicator = 'SI.POV.GINI', start = 2006, end = 2018)
   
-  df_gini <- import_Gini_coefficient_2020 %>%
+  df_gini <- import_Gini_coefficient %>%
     clean_names() %>%
       mutate(
-        iso_code = countrycode(country, origin = 'country.name', destination = 'iso3c'),
         country_standard = countrycode(
-          iso_code, 
-          origin = "iso3c", 
+          iso2c, 
+          origin = "iso2c", 
           destination = "country.name"
           )) %>%
-    rename(gini_2020 = gini_coefficient_2020_data) %>%
-    select(country_standard, gini_2020)  
+    rename(gini = si_pov_gini) %>%
+    filter(!is.na(country_standard)) %>%
+    select(country_standard, year, gini)
 ```
 
 
@@ -607,7 +617,7 @@ Merging datasets
     full_join(df_gdp_health_expend, by = c("country_standard", "year")) %>%
     full_join(df_percap_health_expend, by = c("country_standard", "year")) %>%
     full_join(df_gdp, by = c("country_standard", "year")) %>%
-    full_join(df_gini, by = "country_standard") %>%
+    full_join(df_gini, by = c("country_standard", "year")) %>%
     full_join(df_wvs, by = c("country_standard", "year")) %>%
     full_join(df_africa_int, by = c("country_standard", "year")) %>%
     select(
@@ -655,7 +665,7 @@ Merging datasets
     full_join(df_gdp_health_expend, by = c("country_standard", "year")) %>%
     full_join(df_percap_health_expend, by = c("country_standard", "year")) %>%
     full_join(df_gdp, by = c("country_standard", "year")) %>%
-    full_join(df_gini, by = "country_standard") %>%
+    full_join(df_gini, by = c("country_standard", "year")) %>%
     full_join(df_wvs, by = c("country_standard", "year")) %>%    
     full_join(df_africa_int, by = c("country_standard", "year")) %>%
     select(
@@ -698,20 +708,20 @@ df_controls <- df_all_yr %>%
   group_by(country_standard) %>%
   # These variables don't have values in 2020. Filling in from most recent year
   fill(
-    c(gdp, pub_health_exp_percent_gdp, percap_domestic_health_expenditure)) %>%
+    c(gdp, gini, percap_domestic_health_expenditure)) %>%
   filter(year==2020) %>%
   select(
     country_standard, 
-    gdp, 
-    pub_health_exp_percent_gdp, 
+    gdp,
+    gini,
     percap_domestic_health_expenditure)
   
 df_controls <- df_all_yr_2020 %>%
   select(
-    country_standard, gdp_per_capita, gini_2020, median_age, aged_65_older) %>%
+    country_standard, median_age, aged_65_older) %>%
   full_join(df_controls, by = "country_standard") %>% 
   select(
-    country_standard, gdp, gdp_per_capita, gini_2020, 
+    country_standard, gdp, gini,
         # we discussed using "public health expenditure as a proportion of GDP"
         # as an indicator, but it seemed very similar to the next indicator
         # below, which is "public health expenditure per capita"
@@ -817,7 +827,8 @@ df_transparency_index <- df_transparency_indicators %>%
     )) %>%
   select(country_standard, year, transparency_index, everything()) %>%
   arrange(country_standard, year) %>%
-  filter(year >= 2012 & year <= 2019)
+  filter(!is.na(fh_global_freedom_score) & !is.na(wgi_voice_and_accountability)) %>%
+  filter(year <= 2019)
 
 skim(df_transparency_index)
 histogram(df_transparency_index$transparency_index)
@@ -967,6 +978,7 @@ df_corruption_index <- df_corruption_indicators %>%
       FALSE)) %>%    
   select(country_standard, year, corruption_index, everything()) %>%
   arrange(country_standard, year) %>%
+  filter(!is.na(cpi_score) & !is.na(wgi_control_of_corruption)) %>%
   filter(year <= 2019)
 
 skim(df_corruption_index)
@@ -1006,6 +1018,8 @@ df_effectiveness_index <- df_effectiveness_indicators %>%
       FALSE)) %>%
   select(country_standard, year, effectiveness_index, everything()) %>%
   arrange(country_standard, year) %>%
+  # Most of these are small, island countries. Notably Somalia is dropped. 
+  filter(!is.na(wgi_govt_effective) & !is.na(eiu_gov_func)) %>%
   filter(year <= 2019)
 
 skim(df_effectiveness_index)
@@ -1102,162 +1116,6 @@ write_csv(df_indices_controls, "data/indices_and_controls.csv")
 
 You can do python code, like in example chunk below.
 
-```{python include=FALSE}
-print("hello world")
-
-import pandas as pd
-import numpy as np
-import seaborn as sns
-import statsmodels.api as sm
-import statsmodels.formula.api as smf
-get_ipython().system('pip install linearmodels')
-from linearmodels import PanelOLS
-import statsmodels.formula.api as smf
-from statsmodels.base.covtype import get_robustcov_results
-
-
-# In[2]:
-
-
-path = r'/Users/katiacordoba/Documents/GitHub/policy_lab_ndi/data/indices_and_controls.csv'
-ndi_df = pd.read_csv(path)
-
-
-# In[3]:
-
-
-ndi_df
-
-
-# In[4]:
-
-
-#Replace NaN with mean of column 
-column_means = ndi_df.mean()
-ndi_df = ndi_df.fillna(column_means)
-
-
-# In[5]:
-
-
-ndi_df
-
-
-# In[6]:
-
-
-#Drop last 15 rows with NA values in country_standard
-ndi_df = ndi_df.dropna(subset=['country_standard'])
-
-
-# In[7]:
-
-
-ndi_df
-
-
-# In[8]:
-
-
-pairplot = sns.pairplot(data = ndi_df)
-
-
-# In[9]:
-
-
-#pairplot.savefig("Indices, transparency and controls pairplot.png")
-
-
-# In[10]:
-
-
-reg_corruption = smf.ols('corruption_index ~ transparency_index + gdp + gdp_per_capita + gini_2020 + C(country_standard)', ndi_df).fit(cov_type='cluster', cov_kwds={'groups': ndi_df['country_standard']})
-
-
-# In[11]:
-
-
-reg_corruption.summary()
-
-
-# In[12]:
-
-
-reg_trust = smf.ols('trust_index ~ transparency_index + gdp + gdp_per_capita + gini_2020 + C(country_standard)', ndi_df).fit(cov_type='cluster', cov_kwds={'groups': ndi_df['country_standard']})
-
-
-# In[13]:
-
-
-reg_trust.summary()
-
-
-# In[14]:
-
-
-reg_effectiveness = smf.ols('effectiveness_index ~ transparency_index + gdp + gdp_per_capita + gini_2020 + C(country_standard)', ndi_df).fit(cov_type='cluster', cov_kwds={'groups': ndi_df['country_standard']})
-
-
-# In[15]:
-
-
-reg_effectiveness.summary()
-
-
-# In[16]:
-
-
-reg_bugetparticipation = smf.ols('budget_participation_index ~ transparency_index + gdp + gdp_per_capita + gini_2020 + C(country_standard)', ndi_df).fit(cov_type='cluster', cov_kwds={'groups': ndi_df['country_standard']})
-
-
-# In[17]:
-
-
-reg_bugetparticipation.summary()
-
-
-# In[18]:
-
-
-df_2020 = ndi_df.loc[ndi_df['year'] == 2020]
-
-
-# In[19]:
-
-
-df_2020
-
-
-# In[20]:
-
-
-#COVID outcomes model
-reg_covid = smf.ols('covid_index ~ transparency_index + gdp + gdp_per_capita + gini_2020 + percap_domestic_health_expenditure + median_age + aged_65_older', df_2020).fit()
-
-
-# In[21]:
-
-
-reg_covid.summary()
-
-
-# In[22]:
-
-
-#Fixed effects or not, only 2020? 
-#reg_pandemic_violations = smf.ols('pandemic_dem_violation_index ~ transparency_index + gdp + gdp_per_capita + gini_2020 + percap_domestic_health_expenditure + median_age + aged_65_older + C(country_standard)', ndi_df).fit(cov_type='cluster', cov_kwds={'groups': ndi_df['country_standard']})
-
-
-# In[23]:
-
-
-reg_pandemic_violations = smf.ols('pandemic_dem_violation_index ~ transparency_index + gdp + gdp_per_capita + gini_2020 + percap_domestic_health_expenditure + median_age + aged_65_older', df_2020).fit()
-
-
-# In[24]:
-
-
-reg_pandemic_violations.summary()
 
 ```
 
